[gd_scene load_steps=6 format=3 uid="uid://dkolt4p21odin"]

[ext_resource type="Script" uid="uid://dvs5kih7kqcx3" path="res://game/hud.gd" id="1_d8ggh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0so3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.054902, 0.054902, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_448qv"]
bg_color = Color(0.333333, 0.513726, 0.513726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6xfg"]
bg_color = Color(0.476119, 0.677622, 0.677516, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8ggh"]
bg_color = Color(0.443137, 0.643137, 0.643137, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_d8ggh")

[node name="Panel" type="Panel" parent="."]
offset_left = 862.0
offset_top = 150.0
offset_right = 1062.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_v0so3")

[node name="NextPieceLabel" type="Label" parent="."]
offset_left = 867.0
offset_top = 100.0
offset_right = 1047.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 30
text = "NEXT PIECE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 867.0
offset_top = 350.0
offset_right = 1047.0
offset_bottom = 395.0
theme_override_font_sizes/font_size = 30
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="."]
offset_left = 509.0
offset_top = 293.0
offset_right = 750.0
offset_bottom = 348.0
theme_override_font_sizes/font_size = 40
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 867.0
offset_top = 500.0
offset_right = 1047.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_448qv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q6xfg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d8ggh")
text = "NEW GAME"
